Updated Maven deps in effort to enable pdf export.
Building the jetty image using Make:

```bash
make docker-build
```

yields a Docker image that support eps/png/svg export but not pdf.
I added all of the dependencies mentioned in the
[documentation](https://plantuml.com/pdf) as requirements for pdf
support. However, when I attempt to export a pdf, I receive a
'404 Not Found' error response from the server.

--- a/Dockerfile.jetty
+++ b/Dockerfile.jetty
@@ -21,5 +21,6 @@ USER jetty
 
 ENV GRAPHVIZ_DOT=/usr/bin/dot
 
+EXPOSE 8080
 ARG BASE_URL=ROOT
 COPY --from=builderjetty /app/target/plantuml.war /var/lib/jetty/webapps/$BASE_URL.war
