--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin>   
+      </plugin>
     </plugins>
   </build>
   <reporting>
@@ -129,7 +129,7 @@
             </reports>
           </reportSet>
         </reportSets>
-      </plugin>    
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
@@ -154,7 +154,7 @@
         <configuration>
           <configLocation>${basedir}/src/main/config/checkstyle.xml</configLocation>
           <encoding>UTF-8</encoding>
-          <linkXRef>false</linkXRef>          
+          <linkXRef>false</linkXRef>
         </configuration>
         <reportSets>
           <reportSet>
@@ -162,7 +162,7 @@
               <report>checkstyle</report>
             </reports>
           </reportSet>
-        </reportSets>        
+        </reportSets>
       </plugin>
     </plugins>
   </reporting>
@@ -231,6 +231,46 @@
       <artifactId>jsp-2.1-glassfish</artifactId>
       <version>2.1.v20100127</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.xmlgraphics</groupId>
+      <artifactId>batik-all</artifactId>
+      <version>1.9.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.xmlgraphics</groupId>
+      <artifactId>fop</artifactId>
+      <version>2.4</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.avalon.framework</groupId>
+        <artifactId>avalon-framework-api</artifactId>
+        <version>4.3.1</version>
+    </dependency>
+    <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>1.3.1</version>
+    </dependency>
+    <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>1.0.4</version>
+    </dependency>
+    <dependency>
+        <groupId>xml-apis</groupId>
+        <artifactId>xml-apis-ext</artifactId>
+        <version>1.3.04</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.xmlgraphics</groupId>
+        <artifactId>xmlgraphics-commons</artifactId>
+        <version>1.4</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.ant</groupId>
+        <artifactId>ant</artifactId>
+        <version>1.10.7</version>
     </dependency>
   </dependencies>
 </project>
